# news_weaver

./: .gitignore  README.md  config.yaml  data.db  init_db.py  pyproject.toml  run_extractor.sh  run_transformer.sh
docs/: prompt_alpha.md
src/news_weaver/: __init__.py  extractor.py  loader.py  manager.py  transformer.py
src/news_weaver/common/: config.py  database.py  models.py
src/news_weaver/core/: __init__.py  config.py  exceptions.py  logging.py
src/news_weaver/database/: __init__.py  session.py
src/news_weaver/database/models/: __init__.py  data.py  pipeline.py
src/news_weaver/database/schemas/: __init__.py  data.py  pipeline.py
src/news_weaver/extractor/: extractor.py
src/news_weaver/loader/: loader.py
src/news_weaver/manager/: init_db.py  manager.py
src/news_weaver/transformer/: transformer.py
