[project]
name = "news-weaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DanielBerns", email = "daniel.w.berns@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "python-crontab>=3.3.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[project.scripts]
news-weaver = "news_weaver:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
